force-app/main/default/objects/Contract_Line_Items__c/Contract_Line_Items__c.object-meta.xml
<CustomObject>
    <description>This object captures Contract Line Items.</description>
    <label>Contract Line Items</label>
    <nameField>
        <displayFormat>CLI-{0}</displayFormat>
        <label>Contract Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>