force-app/main/default/objects/Contract_Line_Items__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field denotes the Contract Line Item end date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>