force-app/main/default/objects/Contract_Line_Items__c/fields/Revenue_Contract_Details__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Details__c</fullName>
    <description>This field denotes the revenue contract.</description>
    <label>Revenue Contract Details</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>