force-app/main/default/objects/Contract_Line_Items__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This field denotes the Contract Line Item Start Date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>